--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,5 +1,82 @@
 <ion-view view-title="Search">
   <ion-content>
     <h1>Search</h1>
+	<form ng-submit="doSearch()">
+		<div class="list list-inset">
+		  <label class="item item-input">
+		    <input type="text" placeholder="search1">
+		  </label>
+		  <label class="item item-input">
+		    <input type="text" placeholder="search2">
+		  </label>
+	        <button class="button button-block button-positive" type="submit">search</button>
+		</div>
+	</form>
+
+		<ul class="list" ng-show='showListResult'>
+		    <ion-list>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		      <ion-item>
+		        aaaaaaaaaa
+		      </ion-item>
+		    </ion-list>
+		</ul>
+
   </ion-content>
 </ion-view>
