--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -15,16 +15,16 @@
 
 		<ul class="list" ng-show='showListResult'>
 		    <ion-list>
-		      <ion-item>
+		      <ion-item href="#/app/detail/111">
 		        aaaaaaaaaa
 		      </ion-item>
-		      <ion-item>
+		      <ion-item href="#/app/detail/222">
 		        aaaaaaaaaa
 		      </ion-item>
-		      <ion-item>
+		      <ion-item href="#/app/detail/333">
 		        aaaaaaaaaa
 		      </ion-item>
-		      <ion-item>
+		      <ion-item href="#/app/detail/444">
 		        aaaaaaaaaa
 		      </ion-item>
 		      <ion-item>
