--- a/www/templates/detail.html
+++ b/www/templates/detail.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Playlist">
+<ion-view view-title="Detail">
   <ion-content>
-    <h1>detailsfdsfdsdfsfd</h1>
+    <h1>{{detailId}}</h1>
   </ion-content>
 </ion-view>
