--- a/www/templates/detail.html
+++ b/www/templates/detail.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Detail">
   <ion-content>
-    <h1>{{detailId}}</h1>
+    <h1>{{data.id}}</h1>
+    <h1>{{data.itemId}}</h1>
   </ion-content>
 </ion-view>
