--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Search">
   <ion-content>
-    <h1>Search</h1>
+    <h1>xx检索</h1>
 	<form ng-submit="doSearch()">
 		<div class="list list-inset">
 		  <label class="item item-input">
@@ -16,7 +16,7 @@
 		<ul class="list" ng-show='showListResult'>
 		    <ion-list>
 		      <ion-item ng-repeat="data in searchDatas" href="#/app/detail/{{data.id}}">
-		        {{data.id}}
+		        {{data.itemId}}
 		      </ion-item>
 			</ion-list>
 		</ul>
