--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,13 +1,13 @@
-<ion-view view-title="Search">
+<ion-view view-title="检索Demo">
   <ion-content>
-    <h1>xx检索</h1>
+    <h1>检索Demo</h1>
 	<form ng-submit="doSearch()">
 		<div class="list list-inset">
 		  <label class="item item-input">
-		    <input type="text" placeholder="search1">
+		    <input type="text" placeholder="请输入检索条件1">
 		  </label>
 		  <label class="item item-input">
-		    <input type="text" placeholder="search2">
+		    <input type="text" placeholder="请输入检索条件2">
 		  </label>
 	        <button class="button button-block button-positive" type="submit">search</button>
 		</div>
@@ -20,71 +20,5 @@
 		      </ion-item>
 			</ion-list>
 		</ul>
-		<!--
-		<ul class="list" ng-show='showListResult'>
-		    <ion-list>
-		      <ion-item href="#/app/detail/111">
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item href="#/app/detail/222">
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item href="#/app/detail/333">
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item href="#/app/detail/444">
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		      <ion-item>
-		        aaaaaaaaaa
-		      </ion-item>
-		    </ion-list>
-		</ul>
-		-->
   </ion-content>
 </ion-view>
