--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,7 +14,7 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">导航菜单</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
@@ -24,7 +24,7 @@
         </ion-item>
         -->
         <ion-item menu-close href="#/app/search">
-          Search
+          检索Demo
         </ion-item>
         <!--
         <ion-item menu-close href="#/app/browse">
