--- a/www/templates/mylogin.html
+++ b/www/templates/mylogin.html
@@ -8,11 +8,11 @@
   <form ng-submit="doLogin()">
     <div class="list">
       <label class="item item-input">
-        <span class="input-label">Username</span>
+        <span class="input-label">用户名</span>
         <input type="text" ng-model="loginData.username">
       </label>
       <label class="item item-input">
-        <span class="input-label">Password</span>
+        <span class="input-label">密码</span>
         <input type="password" ng-model="loginData.password">
       </label>
       <label class="item">
