--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -9,7 +9,7 @@
 		  <label class="item item-input">
 		    <input type="text" placeholder="请输入检索条件2">
 		  </label>
-	        <button class="button button-block button-positive" type="submit">search</button>
+	        <button class="button button-block button-positive" type="submit">检索</button>
 		</div>
 	</form>
 
